// ============================================================================
// BookQubit Database
// Schema: Author Schema
// File: ER_DIAGRAM.dbml
// Description: Author Schema ER Diagram
// ============================================================================

Table authors {
  author_id integer [pk, increment]
  uuid text [not null, unique]
  slug text [not null, unique]
  status text
  created_at datetime
}

Table author_translations {
  translation_id integer [pk, increment]
  author_id integer [not null]
  language_code text [not null]
  name text [not null]
  created_at datetime

  indexes {
    (author_id, language_code) [unique]
  }
}

Table languages {
  language_id integer [pk, increment]
  code text [not null, unique]
  name text [not null]
  status text
  created_at datetime
}

// ============================================================================
// Relationships
// ============================================================================

Ref: author_translations.author_id > authors.author_id
Ref: author_translations.language_code > languages.code